[package]
name = "project1_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "8.3.0"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64-url = "2.0.0"
rsa = "0.9.2"
rand = "0.8"
pem = "3.0.2"
chrono = "0.4.31"

rusqlite = { version = "0.30", features = ["bundled"] }
time = "0.3"
base64 = "0.21"
hex = "0.4"